--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 
         <footer class="mb-5">
             <div class="row">
-                <div class="col w-100" id="career">
+                <div class="col" id="career">
                     <center><h3 class="text-light ps-4 py-3">Give your career <br> a successful start!</h3></center>
                 </div>
             </div>
             <div class="row">
-                <div class="col bg-light w-100">
+                <div class="col bg-light">
                     <div class="mt-4 ms-4">
                         <p><strong>Register now: </strong> <a href="https://www.tcs.com/" style="color: #69b754;">https://on.tcs.com/3TwhHZX</a></p>
                         <p><strong>Egligibility: </strong><span id="egligible">Full-Time Graduates from B.com,<br>BA, BAF, BBI, BBA, BMS, and BSc (Marth,<br>Physics, Chemistry, Botany, Zoology) can apply</span></p>
